# rust-conways-game-of-life

./: Cargo.toml  LICENSE.md  README.md  build_release.sh
assets/textures/: sprite_sheet.ron
config/: config.ron  display.ron
src/: config.rs  life.rs  main.rs
src/systems/: cell.rs  mod.rs
